--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "title":"Inutoyabara Blog ",
+    "title":"Inutoyabara",
     "subTitle":"请尊重人类的多样性",
     "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
     "GMEEK_VERSION":"last"
