--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "title":"Inutoyabara",
     "subTitle":"请尊重人类的多样性",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "avatarUrl":"https://inutoyabara.github.io/img/avatar_hu1724759468233839394.png",
     "GMEEK_VERSION":"last"
 }
